[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
actix-ws = "0.3.0"
actix_error_proc = "1.1.4"
base64 = "0.22.1"
dotenvy = "0.15.7"
futures-util = "0.3.31"
mpmc-scheduler = "0.3.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive", "rc"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
tokio = "1.43.0"

[build-dependencies]
dotenvy = "0.15.7"
